# msi-ai-assistant

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  pyproject.toml
ai-assistant-ui/: README.md  angular.json  package-lock.json  package.json
ai-assistant-ui/src/: index.html  styles.scss
ai-assistant-ui/src/app/: app.spec.ts  app.ts
ai-assistant-ui/src/app/components/chat-container/: chat-container.component.ts
ai-assistant-ui/src/app/components/markdown/: markdown.component.ts
ai-assistant-ui/src/app/components/message-input/: message-input.component.ts
ai-assistant-ui/src/app/components/message-item/: message-item.component.ts
ai-assistant-ui/src/app/components/message-list/: message-list.component.ts
ai-assistant-ui/src/app/components/rag-context/: rag-context.component.ts
ai-assistant-ui/src/app/components/sidebar/: sidebar.component.ts
ai-assistant-ui/src/app/components/tool-calls/: tool-calls.component.ts
ai-assistant-ui/src/app/models/: message.model.ts
ai-assistant-ui/src/app/services/: langchain-api.service.ts
data/: motorola_docs.json
python_docs_index_prototype/: chroma.sqlite3
src/: api_server.py  main.py  mcp_server.py  mock_idp.py  motorola_crawler.py  organizations_mcp.py  prototype_crawler.py  prototype_indexer.py  rag_agent.py  test_motorola_structure.py  ticketing_mcp.py  utils.py  weather_server.py
